add comments controller
